Tue Dec 14 11:30:17 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_argf.rb (test_inplace_rename_impossible): unlink
	  the renamed temporary file on no_safe_rename platforms.

	* test/ruby/test_argf.rb (test_readlines_limit_0,
	  test_each_line_limit_0): should close argf because the associated
	  Tempfile object cannot unlink the temporary file when it's gc'ed
	  on some platforms (Windows, etc.)

Tue Dec 14 11:27:07 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/minitest/unit.rb (Minitest::Unit#_run_suite): split test
	  name and its time. Thiw allows to know test's name when you are
	  running tests and meet a test which spends long time at realtime.

Tue Dec 14 11:25:20 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: Add -Werror=declaration-after-statement to default
	  warning flag. If you are using GCC, this flag is useful to
	  prevent breaking VC build.

Tue Dec 14 10:25:57 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/openssl/ossl_asn1.c (ossl_asn1_decode0): how many gcc-c99isms
	  must a man mend; before he can build with VC? r30178

Mon Dec 13 21:26:33 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (simple_sendfile): disable the use of sendfile(2) on
	  FreeBSD. It blocks on TestIO#test_copy_stream_socket.

Mon Dec 13 18:35:33 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c: define USE_SENDFILE on FreeBSD or DragonFly BSD.
	  Remove Mac OS X because its argument is different from them.

Mon Dec 13 12:00:09 2010  Tanaka Akira  <akr@fsij.org>

	* file.c: parenthesize macro arguments.

Mon Dec 13 11:21:14 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (simple_sendfile): added for BSD version of sendfile(2).

Mon Dec 13 09:50:09 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/http.rb (Net::HTTPRequest#set_form): Added to support
	  both application/x-www-form-urlencoded and multipart/form-data.
	  There is a similar API, Net::HTTPRequest#set_form_data, but